fix footer alignment

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,7 +1,9 @@
 .footer {
   padding: 50px 0 50px 0;
-  margin-top: 110px;
   background-color: var(--color-light);
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
 
 .footer__logo {
@@ -60,6 +62,7 @@
   display: flex;
   flex-wrap: wrap;
   list-style: none;
+  min-width: 102px;
   padding: 0;
   margin: 5px 0 0 16px;
 }
@@ -81,10 +84,6 @@
 }
 
 @media only screen and (max-width: 1023px) {
-  .footer {
-    margin-top: 80px;
-  }
-
   .footer__wrapper {
     justify-content: flex-start;
   }
@@ -126,7 +125,6 @@
 
 @media only screen and (max-width: 767px) {
   .footer {
-    margin-top: 60px;
     padding: 30px 0 50px 0;
   }
   .footer__wrapper {
