--- a/src/components/map/map.scss
+++ b/src/components/map/map.scss
@@ -1,7 +1,6 @@
-.map {
+.map__area {
   width: 100%;
   height: 46.2rem;
-  margin-bottom: 110px;
 }
 
 .map__heading {
@@ -9,23 +8,14 @@
 }
 
 @media only screen and (max-width: 1023px) {
-  .map {
-    margin-bottom: 80px;
-  }
-
   .map__heading {
     margin: 68px 0 36px 0;
   }
 }
 
 @media only screen and (max-width: 767px) {
-  .map__container {
-    padding: 0;
-  }
-
-  .map {
+  .map__area {
     padding: 0 16px;
-    margin-bottom: 60px;
     height: 381px;
   }
 
